--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2866,3 +2866,12 @@ body.is-menu-visible #menu {
   .bus-logo-menu {
     max-width: 100%;
   }
+
+  .img-stores{
+    width: 100%;
+    height: 100%;
+  }
+
+  .img-ios{
+    padding-top:20px;
+  }
